--- a/templates/driver/driverspresentation.html.twig
+++ b/templates/driver/driverspresentation.html.twig
@@ -8,7 +8,11 @@
 <section id="driverspresentation--banner" style="background-image:url({{ asset(sImgPath ~'banner/pilotes-motogp-2020.png') }});">
     <H1>LE PADDOCK</H1>
     
-    <a class="btn btn--ordering" href="#services">Commander une course</a>
+    <a class="btn btn--ordering" href="#services">
+        <i class="fas fa-motorcycle"></i>
+        &nbsp;
+        Commander une course
+    </a>
     
     <!-- internal page menu, to navigate to ID -->
     <!-- <div id="nav--inpage">
