--- a/templates/profile/banner.html.twig
+++ b/templates/profile/banner.html.twig
@@ -1,8 +1,12 @@
 <!-- DEBUT Profile banner -->
-<section id="profile--banner" style="background-image:url({{ asset(sImgPath ~'banner/Profile.png') }});">
-    <H1>TABLEAU DE BORD DE L'UTILISATEUR</H1>
+<section id="profile--banner" style="background-image:url({{ asset(sImgPath ~ 'banner/Profile.png') }});">
+    <H1>TABLEAU DE BORD</H1>
     
-    <a class="btn btn--ordering" href="{{ path('registration_driver') }}">Commander une course</a>
+    <a class="btn btn--ordering" href="{#{{ path('') }}#}">
+        <i class="fas fa-motorcycle"></i>
+        &nbsp;
+        Commander une course
+    </a>
     
     <!-- internal page menu, to navigate to ID -->
     {% if app.user %}
@@ -13,10 +17,11 @@
         {% if "ROLE_CUSTOMER" in app.user.roles %}
         <a class="btn nav--inpage-btn-bgb" href="{{ path('profile_customer') }}">Le client</a>
         {% endif %}
+        {{ dump(app.user.driver) }}
         {% if "ROLE_DRIVER" in app.user.roles %}
         <a class="btn nav--inpage-btn-bgb" href="{{ path('profile_driver') }}">Le professionnel</a>
-        {% else %}
-        <a class="btn nav--inpage-btn-important" href="{{ path('registration_driver') }}">Enregistrer un compte pilote VMDTR</a>
+        {% elseif not app.user.driver %}
+        <a class="btn nav--inpage-btn-important" href="{{ path('registration_driver', {'id': app.user.id}) }}">Créer un compte pilote VMDTR</a>
         {% endif %}
     </div>
     {% endif %}
