--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -8,11 +8,8 @@
     {% endfor %}
 
     
-<form class="container mt-5" method="post">
-<!-- <div class="container mt-5"> -->
-    
+<form class="container-fluid mt-5" method="post"> 
     <div class="card--3D-vertical">
-
         <h1 class="h3 mb-3 font-weight-normal">Enregistrez-vous :</h1>
 
         {{ form_start(registrationForm) }}
@@ -20,16 +17,14 @@
         <a href="">Consulter les Conditions Générales d'Utilisation</a>
         <br>
 
-        <div class="d-flex justify-content-between">
-        
+        <div class="d-flex flex-row flex-wrap justify-content-between">
             <button type="submit" class="btn btn-sm btn--blue">
                 <i class="ri-record-circle-line"></i>
                 <p>&ensp;</p>
                 Créer le compte
             </button>
-            <!-- <button type="submit" class="btn">Register</button> -->
             {% if app.user is null %}
-            <div class="d-flex justify-content-between align-items-center">
+            <div class="d-flex flex-row flex-wrap justify-content-between align-items-center">
                 Vous avez déjà un compte ?
                 &ensp;
                 <a class="btn btn-bg btn-secondary" href="{{ path('app_login') }}">
