--- a/templates/profile/banner.html.twig
+++ b/templates/profile/banner.html.twig
@@ -17,7 +17,18 @@
         {% if "ROLE_CUSTOMER" in app.user.roles %}
         <a class="btn nav--inpage-btn-bgb" href="{{ path('profile_customer') }}">Le client</a>
         {% endif %}
-        {{ dump(app.user.driver) }}
+        <div>
+        {#{{ dump('app.user : ') }}#}
+        {#{{ dump(app.user) }}#}
+    </div>
+    <div>
+        {#{{ dump('app.user.driver : ') }}#}
+        {#{{ dump(app.user.driver) }}#}
+    </div>
+    <div>
+        {#{{ dump('app.user.driver.company : ') }}#}
+        {#{{ dump(app.user.driver.company) }}#}
+    </div>
         {% if "ROLE_DRIVER" in app.user.roles %}
         <a class="btn nav--inpage-btn-bgb" href="{{ path('profile_driver') }}">Le professionnel</a>
         {% elseif not app.user.driver %}
