--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -10,7 +10,7 @@
     
 <form class="container-fluid mt-5" method="post"> 
     <div class="card--3D-vertical">
-        <h1 class="h3 mb-3 font-weight-normal">Enregistrez-vous :</h1>
+        <h1 class="h3 mb-3 font-weight-normal">Enregistrez-vous : <small style="color:red;font-size:0.5em;">(* champs obligatoire)</small></h1>
 
         {{ form_start(registrationForm) }}
         {{ form_end(registrationForm) }}
